dataset1235/2025-2/2868285114/users/1060082378/executions/2135592949_3788368433.log
== SUBMISSION (2025-08-12 23:34:32)
-- CODE: 
# Use este codigo como ponto de partida
input("kruse")
# Leitura de valores de entrada
var = ("kruse")
# Impressao de saidas
print("kruse")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
krusekruse
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
krusekruse
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
krusekruse
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
krusekruse
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
krusekruse
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:28:05)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:33:05)
-- CODE: 
# Use este codigo como ponto de partida
input("kruse")
# Leitura de valores de entrada
var = ("kruse")
# Impressao de saidas
print("kruse")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
krusekruse
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
krusekruse
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
krusekruse
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
krusekruse
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
krusekruse
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:26:19)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print(string "Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 7
    print(string "Alighieri")
                 ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 7
    print(string "Alighieri")
                 ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 7
    print(string "Alighieri")
                 ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 7
    print(string "Alighieri")
                 ^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 7
    print(string "Alighieri")
                 ^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:26:09)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:19:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Alighieri)

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:31:07)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var 
# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:31:06)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var 
# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var 
    ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:27:19)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:27:18)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:35:22)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ("kruse")
# Impressao de saidas
print("kruse")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
kruse
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
kruse
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
kruse
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
kruse
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
kruse
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:28:15)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:33:06)
-- CODE: 
# Use este codigo como ponto de partida
input("kruse")
# Leitura de valores de entrada
var = ("kruse")
# Impressao de saidas
print("kruse")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
krusekruse
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
krusekruse
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
krusekruse
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
krusekruse
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
krusekruse
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:29:19)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:27:16)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:28:04)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:28:36)
-- CODE: 
# Use este codigo como ponto de partida
Alighieri
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Alighieri
NameError: name 'Alighieri' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Alighieri
NameError: name 'Alighieri' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Alighieri
NameError: name 'Alighieri' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Alighieri
NameError: name 'Alighieri' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Alighieri
NameError: name 'Alighieri' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:31:32)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = ("Alighieri")
# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:19:49)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:27:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:30:04)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = ("Alighieri")
# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:29:43)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = ("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:37:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()
# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:28:18)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:27:57)
-- CODE: 
# Use este codigo como ponto de partida
input(Alighieri)
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alighieri)
          ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alighieri)
          ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alighieri)
          ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alighieri)
          ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alighieri)
          ^^^^^^^^^
NameError: name 'Alighieri' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:34:34)
-- CODE: 
# Use este codigo como ponto de partida
input("kruse")
# Leitura de valores de entrada
var = ("kruse")
# Impressao de saidas
print("kruse")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
krusekruse
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
krusekruse
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
krusekruse
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
krusekruse
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
krusekruse
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:27:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:37:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()
# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:19:55)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:19:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:27:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Alighieri)

# Impressao de saidas
print(Alighieri)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:34:13)
-- CODE: 
# Use este codigo como ponto de partida
input("kruse")
# Leitura de valores de entrada
var = 
# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:29:08)
-- CODE: 
# Use este codigo como ponto de partida
inpu("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:36:07)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ("kruse")
# Impressao de saidas
print(var = input"kruse")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:36:08)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ("kruse")
# Impressao de saidas
print(var = input"kruse")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 6
    print(var = input"kruse")
                     ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:29:09)
-- CODE: 
# Use este codigo como ponto de partida
inpu("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inpu("Alighieri")
    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:19:54)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:30:03)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = ("Alighieri")
# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:28:17)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:27:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Alighieri)

# Impressao de saidas
print(Alighieri)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Alighieri)
                ^^^^^^^^^
NameError: name 'Alighieri' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:34:31)
-- CODE: 
# Use este codigo como ponto de partida
input("kruse")
# Leitura de valores de entrada
var = ("kruse")
# Impressao de saidas
print("kruse")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
krusekruse
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
krusekruse
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
krusekruse
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
krusekruse
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
krusekruse
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:29:18)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input("Alighieri")
          ^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:29:44)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = ("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:31:34)
-- CODE: 
# Use este codigo como ponto de partida
input("Alighieri")
# Leitura de valores de entrada
var = ("Alighieri")
# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:27:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Alighieri")

# Impressao de saidas
print("Alighieri")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlighieriAlighieri
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlighieriAlighieri
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlighieriAlighieri
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlighieriAlighieri
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlighieriAlighieri
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
